Improved JMX tests.